--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -28,8 +28,9 @@
   width: 30%;
 }
 .home{
-  background-image: url("images/img6.jpg");
-            
+  /*background-image: url("images/img6.jpg");*/
+  background-image: linear-gradient( #EDEDED,#26a69956,#EDEDED,#26a69956);
+  
             width: 100%;
             height: 100%;   
   
@@ -413,4 +414,45 @@ input[type=text],
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(12, 12, 12);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgb(12, 11, 11);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: rgb(15, 14, 14);
+}
+
+a{
+  color: #d60b0b;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+  appearance: auto;
+  font:italic;
+  text-rendering: auto;
+  color: -internal-light-dark(black, white);
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: center;
+  align-items: flex-start;
+  cursor: default;
+  background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
+  box-sizing: border-box;
+  margin: 0em;
+ 
+  padding: 1px 6px;
+  border-width: 2px;
+  /*border-style: outset;*/
+  border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+  border-image: initial;
 }
